--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,5 +9,6 @@ install:
   - "%PYTHON%\\python.exe -m pip install --upgrade wheel"
   - "%PYTHON%\\python.exe -m pip install --upgrade cython"
   - "%PYTHON%\\python.exe -m pip install --upgrade numpy"
+  - "%PYTHON%\\python.exe -m pip install --upgrade scipy http://www.lfd.uci.edu/~gohlke/pythonlibs/vu4hx7yr/scipy-0.19.1-cp27-cp27m-win_amd64.whl"
 test_script:
   - "%PYTHON%\\python.exe setup.py test"
