--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
   - "%PYTHON%\\python.exe -m pip install --upgrade pip"
   - "%PYTHON%\\python.exe -m pip install --upgrade wheel"
   - "%PYTHON%\\python.exe -m pip install --upgrade cython"
-  - "%PYTHON%\\python.exe -m pip install --upgrade numpy"
-  - "%PYTHON%\\python.exe --version"
+  - "%PYTHON%\\python.exe -m pip install --find-links http://28daf2247a33ed269873-7b1aad3fab3cc330e1fd9d109892382a.r6.cf2.rackcdn.com/ --upgrade numpy"
+  - "%PYTHON%\\python.exe -m pip install --find-links http://28daf2247a33ed269873-7b1aad3fab3cc330e1fd9d109892382a.r6.cf2.rackcdn.com/ --upgrade scipy"
 test_script:
   - "%PYTHON%\\python.exe setup.py test"
