--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,9 @@ dependencies:
   pre:
     - pip install --upgrade cython
     - pip install --upgrade numpy
+    - pip install --upgrade scipy
+  override:
+    - pip install --editable . --upgrade
 machine:
   xcode:
     version: 8.3
