--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,12 @@ dependencies:
     - pip install --upgrade scipy
   override:
     - pip install --editable .[test] --upgrade
+deployment:
+  master:
+    branch: master
+    commands:
+      - pip install --upgrade pyinstaller
+      - pyinstaller CellProfiler.spec
 machine:
   xcode:
     version: 8.3
