--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,9 @@ deployment:
       - pyinstaller CellProfiler.spec
       - cp /usr/local/Cellar/libpng/1.6.31/lib/libpng16.16.dylib dist/CellProfiler.app/Contents/MacOS
       - rm dist/CellProfiler.app/Contents/MacOS/libwx*3.0.dylib
+general:
+  artifacts:
+    - dist/CellProfiler.app
 machine:
   xcode:
     version: 8.3
