--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,8 @@ deployment:
       - cp /usr/local/Cellar/libpng/1.6.31/lib/libpng16.16.dylib dist/CellProfiler.app/Contents/MacOS
       - rm dist/CellProfiler.app/Contents/MacOS/libwx*3.0.dylib
       - hdiutil create -srcfolder dist/CellProfiler.app -volname CellProfiler -fs HFS+ -fsargs "-c c=64,a=16,e=16" -format UDRW -size 500000k dist/CellProfiler-nightly.dmg
-      - aws s3 sync dist/CellProfiler.dmg s3://cellprofiler-releases --delete
+      - aws s3 sync dist/CellProfiler-nightly.dmg s3://cellprofiler-releases
+      --delete
 general:
   artifacts:
     - dist/CellProfiler.app
