--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,11 @@ dependencies:
   pre:
     - brew update
     - brew install awscli mysql upx wxpython
-    - pip install --upgrade cython numpy scipy
+    - pip install --upgrade pip
+    - pip install --upggrade wheel
+    - pip install --upgrade cython
+    - pip install --upgrade numpy
+    - pip install --upgrade scipy
 deployment:
   nightly:
     branch: features/circle
