--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,11 @@ dependencies:
     - pip install --editable .[test] --upgrade
   pre:
     - brew update
-    - brew install awscli mysql upx wxpython
+    - brew install awscli
+    - brew install mysql
+    - brew install upx
+    - brew install python
+    - brew install wxpython
     - pip install --upgrade pip
     - pip install --upgrade wheel
     - pip install --upgrade cython
