--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ dependencies:
     - brew install upx
     - brew install python
     - brew install wxpython
+    - export PATH="/usr/local/opt/python/libexec/bin:$PATH"
     - pip install --upgrade pip
     - pip install --upgrade wheel
     - pip install --upgrade cython
