--- a/circle.yml
+++ b/circle.yml
@@ -8,12 +8,8 @@ dependencies:
     - pip2 install --editable .[test] --upgrade
   pre:
     - brew update
-    - brew install awscli
-    - brew install mysql
-    - brew install upx
-    - brew install python
-    - brew install wxpython
-    - export PATH="/usr/local/opt/python/libexec/bin:$PATH"
+    - brew install awscli mysql upx python wxpython
+    # - export PATH="/usr/local/opt/python/libexec/bin:$PATH"
     - pip2 install --upgrade pip
     - pip2 install --upgrade wheel
     - pip2 install --upgrade cython
@@ -21,7 +17,7 @@ dependencies:
     - pip2 install --upgrade scipy
 deployment:
   nightly:
-    branch: features/circle
+    branch: master
     commands:
       - pip2 install --upgrade pyinstaller
       - pyinstaller CellProfiler.spec
