--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,6 @@ machine:
     CP_MYSQL_TEST_HOST: "127.0.0.1"
     CP_MYSQL_TEST_PASSWORD: ""
     CP_MYSQL_TEST_USER: "root"
-    PATH: "/usr/local/opt/python/libexec/bin:$PATH"
   xcode:
     version: 8.2
 dependencies:
@@ -25,7 +24,7 @@ database:
     - brew services start mysql
 test:
   override:
-    - pytest tests/modules/test_exporttodatabase.py
+    - python2 -m pytest tests/modules/test_exporttodatabase.py
 # deployment:
 #   nightly:
 #     branch: features/circle
