--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - brew update && brew install awscli mysql upx python wxpython
 
     # Install CellProfiler’s Python dependencies and PyInstaller:
-    - pip2 install --upgrade cython numpy pyinstaller scipy
+    - pip2 install --upgrade cython numpy scipy
   override:
     # Install CellProfiler:
     - pip2 install --editable ".[build, test]" --upgrade    
@@ -25,36 +25,40 @@ database:
 test:
   override:
     - python2 -m pytest
-# deployment:
-#   nightly:
-#     branch: features/circle
-#     commands:
-#       # Create macOS application bundle:
-#       - pyinstaller CellProfiler.spec
+deployment:
+  nightly:
+    branch: features/circle
+    commands:
+      # Create macOS application bundle:
+      - pyinstaller CellProfiler.spec
 
-#       # Copy Homebrew’s libpng dynamic library to application bundle:
-#       - >
-#         cp                                                    \
-#           `brew --cellar libpng`/1.6.31/lib/libpng16.16.dylib \
-#           dist/CellProfiler.app/Contents/MacOS
+      # Copy Homebrew’s libpng dynamic library to application bundle:
+      - >
+        cp                                                    \
+          `brew --cellar libpng`/1.6.31/lib/libpng16.16.dylib \
+          dist/CellProfiler.app/Contents/MacOS
 
-#       # Remove duplicate wx dynamic libraries from application bundle:
-#       - rm dist/CellProfiler.app/Contents/MacOS/libwx*3.0.dylib
+      # Remove duplicate wx dynamic libraries from application bundle:
+      - rm dist/CellProfiler.app/Contents/MacOS/libwx*3.0.dylib
       
-#       # Create Apple Disk Image:
-#       - >
-#         hdiutil create                     \
-#           -format UDRW                     \
-#           -fs HFS+                         \
-#           -fsargs "-c c=64,a=16,e=16"      \
-#           -size 500000k                    \
-#           -srcfolder dist/CellProfiler.app \
-#           -volname CellProfiler            \
-#           dist/CellProfiler-nightly.dmg
+      # Create Apple Disk Image:
+      - >
+        hdiutil create                     \
+          -format UDRW                     \
+          -fs HFS+                         \
+          -fsargs "-c c=64,a=16,e=16"      \
+          -size 500000k                    \
+          -srcfolder dist/CellProfiler.app \
+          -volname CellProfiler            \
+          dist/CellProfiler-nightly.dmg
       
-#       # Upload to disk image to Amazon S3 (Simple Storage Service):
-#       - >
-#         aws s3 sync dist s3://cellprofiler-releases \
-#           --delete                                  \
-#           --exclude "*"                             \
-#           --include "CellProfiler-nightly.dmg"
+      # Upload to disk image to Amazon S3 (Simple Storage Service):
+      - >
+        aws s3 sync dist s3://cellprofiler-releases \
+          --delete                                  \
+          --exclude "*"                             \
+          --include "CellProfiler-nightly.dmg"
+  beta:
+    branch: beta
+  stable:
+    branch: stable
