--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,9 @@
+general:
+  branches:
+    only:
+      - beta
+      - features/circle
+      - stable
 machine:
   environment:
     CP_MYSQL_TEST_HOST: "127.0.0.1"
