--- a/circle.yml
+++ b/circle.yml
@@ -2,13 +2,9 @@ general:
   branches:
     only:
       - beta
-      - features/circle
+      - platforms/macos
       - stable
 machine:
-  environment:
-    CP_MYSQL_TEST_HOST: "127.0.0.1"
-    CP_MYSQL_TEST_PASSWORD: ""
-    CP_MYSQL_TEST_USER: "root"
   xcode:
     version: 8.2
 dependencies:
@@ -29,9 +25,9 @@ deployment:
       - cd macos && make
       
       # Upload disk image to Amazon S3 (Simple Storage Service):
-      - >
-        aws s3 sync dist s3://cellprofiler-releases \
-          --acl public-read                         \
-          --delete                                  \
-          --exclude "*"                             \
-          --include "CellProfiler-nightly.dmg"
+      # - >
+      #   aws s3 sync dist s3://cellprofiler-releases \
+      #     --acl public-read                         \
+      #     --delete                                  \
+      #     --exclude "*"                             \
+      #     --include "CellProfiler-nightly.dmg"
