--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,4 +17,6 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	rsync -rp --delete ../cellprofiler/data/help source
+	rsync -rp --delete ../cellprofiler/data/images source
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
