--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ virtualenv:
   system_site_packages: true
 install:
   - pip install --upgrade pip
+  - pip install --upgrade 'numpy<1.12.0'
   - pip install --requirement requirements.txt
   - pip freeze
 script:
