--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,45 @@
-addons:
-  apt:
-    packages:
-      - libhdf5-serial-dev
-      - python-mysqldb
-      - python-pip
-cache:
-  apt: true
-  directories: $HOME/.cache/pip
-dist: trusty
-env:
-  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
-group: deprecated-2017Q2
-install:
-  - pip install --upgrade pip
-  - pip install --upgrade cython
-  - pip install --upgrade joblib
-  - pip install --upgrade numpy
-  - pip install --upgrade 'scipy<1.1'
-  - pip install --upgrade --editable .[test]
-  - pip freeze
+group: travis_latest
 language: python
+env:
+    - REPO=CellProfiler/BatchProfiler
+    - REPO=CellProfiler/CellProfiler  # has .travis.yml file
+    - REPO=CellProfiler/CellProfiler-Analyst
+    - REPO=CellProfiler/CellProfiler-build
+    - REPO=CellProfiler/CellProfiler-plugins  # has .travis.yml file
+    - REPO=CellProfiler/Distributed-CellProfiler
+    - REPO=CellProfiler/distribution  # has .travis.yml file
+    - REPO=CellProfiler/meoir
+    - REPO=CellProfiler/python-bioformats  # has .travis.yml file
+    - REPO=CellProfiler/stitching
+    - REPO=CellProfiler/tutorial
+cache: pip
+python:
+    - 2.7
+    - 3.6
+    #- nightly
+    #- pypy
+    #- pypy3
+matrix:
+    allow_failures:
+        - python: 3.6
+        - python: nightly
+        - python: pypy
+        - python: pypy3
+install:
+    #- pip install -r requirements.txt
+    - pip install flake8  # pytest  # add other testing frameworks later
+before_script:
+    - URL=https://github.com/${REPO}
+    - echo ; echo -n "flake8 testing of ${URL} on " ; python -V
+    - git clone --depth=50 ${URL} ~/${REPO}  # --branch=master
+    - cd ~/${REPO}
+script:
+    - echo stop the build if there are Python syntax errors or undefined names
+    - echo ; echo -n "flake8 testing of ${URL} on " ; python -V
+    - time flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    - echo exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+    - time flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    #- true  # pytest --capture=sys
 notifications:
-  email: false
-  slack:
-    secure: kDWVy90sDY+o3g0/ZTGX2D+PTbzhtd74Whe1AJHhcUDobTUzkch8GtY9eZxybZk4nga9lQxL6YeJ72SfBBEPaLzXcUMe0YcNaBydkQHcipKZn+Vcb8kf2FiZC6YwsUYfTvvH9MPLbkZOZvsNyd0h85z+hYMB8jHsq6Yn5gf79BA=
-    on_failure: always
     on_success: change
-python: 2.7.12
-script: pytest
-services: mysql
-sudo: required
+    on_failure: change  # `always` will be the setting once code changes slow down
