Add pinned and unpinned requirements for different travis builds
Fix requirements files formatting


Move unpinned requirements to allowable failures


Properly set allowable failures


Make sure the unpinned tests actually run

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,16 @@ cache:
   directories: $HOME/.cache/pip
 dist: trusty
 env:
-  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
+  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="pinned_requirements.txt"
+  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
+matrix:
+  allow_failures:
+    env:
+      - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
 group: deprecated-2017Q2
 install:
-  - pip install --upgrade pip
-  - pip install --upgrade cython
-  - pip install --upgrade joblib
-  - pip install --upgrade numpy
-  - pip install --upgrade scipy
-  - pip install --upgrade --editable .[test]
+  - pip install -r $REQUIREMENTS_FILE
+  - pip install --upgrade .[test]
   - pip freeze
 language: python
 notifications:
