--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
---editable .
+boto3
+centrosome
+docutils
+h5py
+inflect
+javabridge
+joblib
+mahotas
+matplotlib>=2.0.0,!=2.1.0
+MySQL-python
+numpy
+prokaryote==2.4.0
+python-bioformats==1.4.0
+pyzmq==15.3.0
+raven
+requests
+scikit-image
+scikit-learn
+scipy
