--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,30 @@
-addons:
-  apt:
-    packages:
-      - libgstreamer-plugins-base1.0-0
-      - libgstreamer-plugins-base1.0-dev
-      - libgstreamer1.0-0
-      - libgstreamer1.0-dev
-      - libgtk-3-0
-      - libgtk-3-dev
-      - libhdf5-serial-dev
-      - libjpeg-dev
-      - libnotify-dev
-      - libpng-dev
-      - libsdl2-dev
-      - libsm-dev
-      - libsm6
-      - libtiff5
-      - libtiff5-dev
-      - libwebkitgtk-3.0-dev
-      - python-dev
-      - python-mysqldb
-      - python-pip
-cache:
-  apt: true
-  directories: $HOME/.cache/pip
+#addons:
+#  apt:
+#    packages:
+#      - libgstreamer-plugins-base1.0-0
+#      - libgstreamer-plugins-base1.0-dev
+#      - libgstreamer1.0-0
+#      - libgstreamer1.0-dev
+#      - libgtk-3-0
+#      - libgtk-3-dev
+#      - libhdf5-serial-dev
+#      - libjpeg-dev
+#      - libnotify-dev
+#      - libpng-dev
+#      - libsdl2-dev
+#      - libsm-dev
+#      - libsm6
+#      - libtiff5
+#      - libtiff5-dev
+#      - libwebkitgtk-3.0-dev
+#      - python-dev
+#      - python-mysqldb
+#      - python-pip
+before_install:
+  - sudo apt-get install --yes libgstreamer-plugins-base1.0-0 libgstreamer-plugins-base1.0-dev libgstreamer1.0-0 libgstreamer1.0-dev libgtk-3-0 libgtk-3-dev libhdf5-serial-dev libjpeg-dev libnotify-dev libpng-dev libsdl2-dev libsm-dev libsm6 libtiff5 libtiff5-dev libwebkitgtk-3.0-dev python-dev python-mysqldb python-pip
+#cache:
+#  apt: true
+#  directories: $HOME/.cache/pip
 dist: trusty
 env:
   global:
