--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ numpy==1.15.4
 prokaryote==2.4.1
 python-bioformats==1.5.2
 pyzmq==15.3.0
-raven==6.9.0
-requests==2.20.1
-scikit-image==0.14.0
-scikit-learn==0.20.1
-scipy==1.1.0
-six==1.11.0
+raven
+requests
+scikit-image
+scikit-learn
+scipy
+wxPython==4.0.3
