--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@
 #      - python-mysqldb
 #      - python-pip
 before_install:
-  - sudo apt update && sudo apt-get install --yes libgstreamer-plugins-base1.0-0 libgstreamer-plugins-base1.0-dev libgstreamer1.0-0 libgstreamer1.0-dev libgtk-3-0 libgtk-3-dev libhdf5-serial-dev libjpeg-dev libnotify-dev libpng-dev libsdl2-dev libsm-dev libsm6 libtiff5 libtiff5-dev libwebkitgtk-3.0-dev freeglut3 freeglut3-dev python-dev python-mysqldb python-pip
+  - sudo apt-get install --yes libgstreamer-plugins-base1.0-0 libgstreamer-plugins-base1.0-dev libgstreamer1.0-0 libgstreamer1.0-dev libgtk-3-0 libgtk-3-dev libhdf5-serial-dev libjpeg-dev libnotify-dev libpng-dev libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev libsm-dev libsm6 libtiff5 libtiff5-dev libwebkitgtk-3.0-dev freeglut3 freeglut3-dev python-dev python-mysqldb python-pip
 cache:
   apt: true
   directories: $HOME/.cache/pip
