--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,3 @@
-#addons:
-#  apt:
-#    packages:
-#      - libgstreamer-plugins-base1.0-0
-#      - libgstreamer-plugins-base1.0-dev
-#      - libgstreamer1.0-0
-#      - libgstreamer1.0-dev
-#      - libgtk-3-0
-#      - libgtk-3-dev
-#      - libhdf5-serial-dev
-#      - libjpeg-dev
-#      - libnotify-dev
-#      - libpng-dev
-#      - libsdl2-dev
-#      - libsm-dev
-#      - libsm6
-#      - libtiff5
-#      - libtiff5-dev
-#      - libwebkitgtk-3.0-dev
-#      - python-dev
-#      - python-mysqldb
-#      - python-pip
 before_install:
   - sudo apt-get install --yes libgstreamer-plugins-base1.0-0 libgstreamer-plugins-base1.0-dev libgstreamer1.0-0 libgstreamer1.0-dev libgtk-3-0 libgtk-3-dev libhdf5-serial-dev libjpeg-dev libnotify-dev libpng-dev libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev libsm-dev libsm6 libtiff5 libtiff5-dev libwebkitgtk-3.0-dev freeglut3 freeglut3-dev python-dev python-mysqldb python-pip
 cache:
@@ -46,7 +24,6 @@ notifications:
     on_failure: always
     on_success: change
 python: 2.7.12
-script:
-  - "echo 'foo!'"
+script: pytest
 services: mysql
 sudo: required
