Don't upgrade when installing test dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
       - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
 install:
   - pip install -r $REQUIREMENTS_FILE
-  - pip install --upgrade .[test]
+  - pip install .[test]
   - pip freeze
 language: python
 notifications:
