Build should succeed even if unpinned fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ cache:
   directories: $HOME/.cache/pip
 dist: trusty
 env:
-  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="pinned_requirements.txt"
-  - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
+  global:
+    - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD=""
+  matrix:
+    - REQUIREMENTS_FILE="pinned_requirements.txt"
+    - REQUIREMENTS_FILE="requirements.txt"
 matrix:
   allow_failures:
-    env:
-      - LC_ALL="en_US.UTF-8" CP_MYSQL_TEST_HOST="127.0.0.1" CP_MYSQL_TEST_USER="root" CP_MYSQL_TEST_PASSWORD="" REQUIREMENTS_FILE="requirements.txt"
+    - env: REQUIREMENTS_FILE="requirements.txt"
 install:
   - pip install -r $REQUIREMENTS_FILE
   - pip install .[test]
