--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-boto3==1.9.60
-centrosome==1.1.6
-docutils==0.14
-h5py==2.8.0
-inflect==2.1.0
-javabridge==1.0.18
-joblib==0.13.0
-mahotas==1.4.5
-matplotlib==2.2.3
+boto3
+centrosome
+docutils
+h5py
+inflect
+javabridge
+joblib
+mahotas
+matplotlib>=2.0.0,!=2.1.0
 mysqlclient==1.3.13
-numpy==1.15.4
-prokaryote==2.4.1
-python-bioformats==1.5.2
+numpy
+prokaryote==2.4.0
+python-bioformats==1.4.0
 pyzmq==15.3.0
 raven
 requests
